--- a/web/server/static/css/style.css
+++ b/web/server/static/css/style.css
@@ -1,3 +1,5 @@
+@import "../bower_components/angular-upload/src/directives/btnUpload.min.css";
+
 body {
     margin-top: 30px;
     background-color: white;
@@ -40,4 +42,8 @@ body {
 
 .table > tbody > tr > td {
      vertical-align: middle;
+}
+
+.spacer {
+    margin-top: 10px;
 }
