--- a/web/server/templates/login.html
+++ b/web/server/templates/login.html
@@ -32,7 +32,7 @@
         <!--        integrity="sha384-gv0oNvwnqzF6ULI9TVsSmnULNb3zasNysvWwfT/s4l8k5I+g6oFz9dye0wg3rQ2Q"-->
         <!--        crossorigin="anonymous">-->
 
-        <link rel="stylesheet" href="static/bootstrap.min.css">
+        <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
         <!-- Optional theme -->
         <!--<link-->
@@ -47,7 +47,7 @@
                 href="static/bower_components/components-font-awesome/css/font-awesome.min.css">
 
         <!-- Application styles -->
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="static/css/style.css">
 
         <!-- Google fonts -->
         <link
