Change storage format (zip file)

--- a/web/server/templates/index.html
+++ b/web/server/templates/index.html
@@ -93,16 +93,16 @@
                                             Название
                                         </th>
 
-                                        <th class="text-center col-xs-2 col-md-2">
-                                            Загрузить 3D модель <br> .fbx или .obj
-                                        </th>
+                                        <!--<th class="text-center col-xs-2 col-md-2">-->
+                                        <!--    Загрузить 3D модель <br> .fbx или .obj-->
+                                        <!--</th>-->
+
+                                        <!--<th class="text-center col-xs-2 col-md-2">-->
+                                        <!--    Загрузить текстуру <br> .png или .jpg-->
+                                        <!--</th>-->
 
                                         <th class="text-center col-xs-2 col-md-2">
-                                            Загрузить текстуру <br> .png или .jpg
-                                        </th>
-
-                                        <th class="text-center col-xs-2 col-md-2">
-                                            Загрузить архив .zip
+                                            Загрузить 3D модель <br> .zip
                                         </th>
 
                                         <th
@@ -178,13 +178,7 @@
 
                                         <!-- Preview -->
                                         <td  align="center">
-                                            <!--<img data-ng-src="{{model.preview.content|angular}}"/>-->
-                                            <thumbnail
-                                                    file-type="image"
-                                                    source="{{model.preview.content|angular}}"
-                                                    max-height="100"
-                                                    max-width="100">
-                                            </thumbnail>
+                                            <img data-ng-src="{{model.preview.content|angular}}"/>
 
                                             <div
                                                     ng-if="model.is_edited"
@@ -212,47 +206,47 @@
 
                                             <div ng-if="!model.is_edited">
                                                 <p class="text-center">
-                                                    {{ model.name|angular }}
+                                                    {{ model.name | angular }}
                                                 </p>
                                             </div>
                                         </td>
 
                                         <!-- Mesh -->
-                                        <td align="center">
-                                            <p class="text-center">
-                                                {{model.mesh.name|angular}}
-                                            </p>
+                                        <!--<td align="center">-->
+                                        <!--    <p class="text-center">-->
+                                        <!--        {{model.mesh.name|angular}}-->
+                                        <!--    </p>-->
 
-                                            <div
-                                                    ng-if="model.is_edited"
-                                                    class="spacer">
-                                                <div class="btn btn-default btn-upload">
-                                                    <input
-                                                            type="file"
-                                                            file-read="model.mesh"/>
-                                                    Выбрать
-                                                </div>
+                                        <!--    <div-->
+                                        <!--            ng-if="model.is_edited"-->
+                                        <!--            class="spacer">-->
+                                        <!--        <div class="btn btn-default btn-upload">-->
+                                        <!--            <input-->
+                                        <!--                    type="file"-->
+                                        <!--                    file-read="model.mesh"/>-->
+                                        <!--            Выбрать-->
+                                        <!--        </div>-->
 
-                                            </div>
-                                        </td>
+                                        <!--    </div>-->
+                                        <!--</td>-->
 
                                         <!-- Texture -->
-                                        <td  align="center">
-                                            <img data-ng-src="{{model.texture.thumbnail|angular}}"/>
+                                        <!--<td  align="center">-->
+                                        <!--    <img data-ng-src="{{model.texture.thumbnail|angular}}"/>-->
 
-                                            <div
-                                                    ng-if="model.is_edited"
-                                                    class="spacer">
-                                                <div class="btn btn-default btn-upload">
-                                                    <input
-                                                            type="file"
-                                                            accept="image/*"
-                                                            file-read="model.texture"/>
-                                                    Выбрать
-                                                </div>
+                                        <!--    <div-->
+                                        <!--            ng-if="model.is_edited"-->
+                                        <!--            class="spacer">-->
+                                        <!--        <div class="btn btn-default btn-upload">-->
+                                        <!--            <input-->
+                                        <!--                    type="file"-->
+                                        <!--                    accept="image/*"-->
+                                        <!--                    file-read="model.texture"/>-->
+                                        <!--            Выбрать-->
+                                        <!--        </div>-->
 
-                                            </div>
-                                        </td>
+                                        <!--    </div>-->
+                                        <!--</td>-->
 
                                         <!-- Zip file -->
                                         <td align="center">
@@ -307,11 +301,11 @@
         </script>
 
         <!-- Latest compiled and minified Angular ONE -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.js"></script>
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>-->
 
         <!-- Bower -->
-        <script src="static/bower_components/angular-thumbnails/dist/angular-thumbnails.min.js"></script>
+        <!--<script src="static/bower_components/angular-thumbnail/angular-thumbnail.min.js"></script>-->
         <script src="static/bower_components/angular-uuid/angular-uuid.js"></script>
         <script src="static/bower_components/angular-images-resizer/angular-images-resizer.js"></script>
         <!--<script src="static/bower_components/angular-upload/angular-upload.min.js"></script>-->
